--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <title>Exercise 1</title>
+    <style>
+        a.test {
+            font-weight: bold;
+        }
+    </style>
   </head>
   <body>
 
@@ -46,10 +52,13 @@
             </form>
         </p>
 
-        <div id="jumbotron"></div>
+        <div id="jumbotron">
+            <h1>Hello World</h1>
+        </div>
     </div>
 
-    <h1>Hello World</h1>
-
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
